@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * add PMD checks on compile
+ * add all OAuth error codes from supported RFCs (incl. "invalid_token") (thanks to https://github.com/echorebel)
 
 [6.5.1]
  * cleanup deprecates methods
